wazzup-bot-and-webhook - вынесен парсинг